--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 <body>
     <header class="navbar sticky">
         <div class="logo">
-            <a href="/index.html"><img src="/images/croaland_logo2.png" alt="logo"></a>
+            <a href="index.html"><img src="/images/croaland_logo2.png" alt="logo"></a>
         </div>
         <ul class="navmenu">
-            <li><a href="/tours.html">Tours</a></li>
-            <li><a href="/contact.html">Contact</a></li>
+            <li><a href="tours.html">Tours</a></li>
+            <li><a href="contact.html">Contact</a></li>
             <li>
-                <a href="/index.html"><img src="/images/en.png" alt="British flag"></img> English</a>
+                <a href="index.html"><img src="/images/en.png" alt="British flag"></img> English</a>
                   <ul>
-                    <li><a href="/index_suomi.html"><img src="/images/fi.png" alt="Finnish flag"></img> Suomi</a></li>
+                    <li><a href="index_suomi.html"><img src="/images/fi.png" alt="Finnish flag"></img> Suomi</a></li>
                   </ul>
               </li>
             </li>
